make z-index of .matching-select-state div -1 until the answer has been submitted - fixes https://github.com/adaptlearning/adapt_framework/issues/1501

--- a/less/matching.less
+++ b/less/matching.less
@@ -21,7 +21,7 @@
 		margin-top: -(@icon-size/2);
 		right: 10px;
 		background: none;
-		z-index: 1;
+		z-index: -1;
 
 		.dir-rtl & {
 			right: inherit;
@@ -121,6 +121,10 @@
 			}
 			.matching-select-container {
 				background-color: @item-color-disabled;
+			}
+
+			.matching-select-state {
+				z-index: 1;
 			}
 		}
 
